--- a/aprendizado-supervisionado.tex
+++ b/aprendizado-supervisionado.tex
@@ -18,8 +18,11 @@ Ambos os casos podem se beneficiar do tipo de aprendizado denominado \textit{ati
 
 Aprendizado ativo é o estudo de algoritmos interativos que procuram fazer uso racional dos dados
 por meio de perguntas \citep{series/synthesis/2012Settles}.
-A pergunta do cenário mais comum na literatura é ``\textit{Qual é o rótulo do exemplo $\bm{x}$?}''.
-O problema de se decidir qual seria o melhor $\bm{x}$ é a
+A pergunta do cenário mais comum na literatura,
+num dado momento durante o aprendizado,
+é ``\textit{Qual é o rótulo do exemplo $\bm{x}$?}''.
+Dado que a obtenção de um rótulo confiável normalmente é um processo custoso,
+o problema de se decidir qual seria o melhor $\bm{x}$ é a
 motivação basilar desta tese.
 \ano{basilar pois é em oposição à motivação imediata e específica}
 
