--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -994,33 +994,78 @@ year = {2006}
   \URL =         "http://dx.doi.org/10.1007/978-3-319-07617-1",
 }
 
+@article{doi/ml0,
+      author        = "Davi P. Santos and Andr{\'e} Carlos Ponce Leon Ferreira Carvalho",
+      journal = "GitHub Software Repository",
+      title         = "{Wrappers for Weka for Scala}",
+      month         = "Jan",
+      year          = "2015",
+      doi           = "{DOI:10.5281/zenodo.13735}",
+      url           = "{URL:http://dx.doi.org/10.5281/zenodo.13735}",
+}
+
+@article{doi/al0,
+      author        = "Davi P. Santos and Andr{\'e} Carlos Ponce Leon Ferreira Carvalho",
+      journal = "GitHub Software Repository",
+      title         = "{An Active Learning Library for Scala}",
+      month         = "Jan",
+      year          = "2015",
+      doi           = "{DOI:10.5281/zenodo.13733}",
+      url           = "{URL:http://dx.doi.org/10.5281/zenodo.13733}",
+}
+
+@article{doi/elm0,
+      author        = "Davi P. Santos and Andr{\'e} Carlos Ponce Leon Ferreira Carvalho",
+      journal = "GitHub Software Repository",
+      title         = "{ELM implementation in Scala using MTJ/netlib-java/BLAS/LAPACK}",
+      month         = "Jan",
+      year          = "2015",
+      doi           = "{DOI:10.5281/zenodo.13734}",
+      url           = "{URL:http://dx.doi.org/10.5281/zenodo.13734}",
+}
+
+@article{doi/ucipp0,
+      author        = "Luis Paulo Faina Garcia",
+      journal = "GitHub Software Repository",
+      title         = "{A huge collection of preprocessed ARFF datasets for supervised classification problems}",
+      month         = "Jan",
+      year          = "2015",
+      doi           = "{DOI:10.5281/zenodo.13748}",
+      url           = "{URL:http://dx.doi.org/10.5281/zenodo.13748}",
+}
+
 @article{doi/ml,
       author        = "Davi P. Santos and Andr{\'e} Carlos Ponce Leon Ferreira Carvalho",
       journal = "GitHub Software Repository",
-      title         = "Wrappers for Weka for Scala",
+      title         = "{Wrappers for Weka for Scala}",
       month         = "Jan",
       year          = "2015",
-      doi           = "{10.5281/zenodo.13735}",
-      url           = "{http://dx.doi.org/10.5281/zenodo.13735}",
+      note           = "{DOI:10.5281/zenodo.13735. URL:http://dx.doi.org/10.5281/zenodo.13735}",
 }
 
 @article{doi/al,
       author        = "Davi P. Santos and Andr{\'e} Carlos Ponce Leon Ferreira Carvalho",
       journal = "GitHub Software Repository",
-      title         = "An Active Learning Library for Scala",
+      title         = "{An Active Learning Library for Scala}",
       month         = "Jan",
       year          = "2015",
-      doi           = "{10.5281/zenodo.13733}",
-      url           = "{http://dx.doi.org/10.5281/zenodo.13733}",
+      note           = "{DOI:10.5281/zenodo.13733. URL:http://dx.doi.org/10.5281/zenodo.13733}",
 }
 
 @article{doi/elm,
       author        = "Davi P. Santos and Andr{\'e} Carlos Ponce Leon Ferreira Carvalho",
       journal = "GitHub Software Repository",
-      title         = "ELM implementation in Scala using MTJ/netlib-java/BLAS/LAPACK",
+      title         = "{ELM implementation in Scala using MTJ/netlib-java/BLAS/LAPACK}",
       month         = "Jan",
       year          = "2015",
-      doi           = "{10.5281/zenodo.13734}",
-      url           = "{http://dx.doi.org/10.5281/zenodo.13734}",
+      note           = "{DOI:10.5281/zenodo.13734. URL:http://dx.doi.org/10.5281/zenodo.13734}",
 }
 
+@article{doi/ucipp,
+      author        = "Luis Paulo Faina Garcia",
+      journal = "GitHub Software Repository",
+      title         = "{A huge collection of preprocessed ARFF datasets for supervised classification problems}",
+      month         = "Jan",
+      year          = "2015",
+      note           = "{DOI:10.5281/zenodo.13748. URL:http://dx.doi.org/10.5281/zenodo.13748}",
+}
